// Copyright (C) 2024 The Qt Company Ltd.
// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only

syntax = "proto3";

package qtbench;

message EmptyMessage {}

message SimpleBoolMessage {
    bool testFieldBool = 1;
}

message SimpleBytesMessage {
    bytes testFieldBytes = 1;
}

message RecursiveMessage {
    int32 testFieldInt = 1;
    RecursiveMessage testFieldRecursive = 2;
}

message ListOfObjects {
    repeated SimpleBoolMessage testFieldBool = 1;
}
